// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`code block math custom language does not impact other code blocks 1`] = `
"<p>text before</p>
<pre><code class="language-math">a^2 + b^2 = c^2
</code></pre>
<p>text after</p>
"
`;

exports[`code block math custom language renders code block math 1`] = `
"<p>text before</p>
<math-renderer class="js-display-math" style="display: block; text-align: center;">a^2 + b^2 = c^2</math-renderer>
<p>text after</p>
"
`;

exports[`code block math default language does not impact other code blocks 1`] = `
"<p>text before</p>
<pre><code class="language-latex">a^2 + b^2 = c^2
</code></pre>
<p>text after</p>
"
`;

exports[`code block math default language renders code block math 1`] = `
"<p>text before</p>
<math-renderer class="js-display-math" style="display: block; text-align: center;">a^2 + b^2 = c^2</math-renderer>
<p>text after</p>
"
`;

exports[`code block math default language sanitizes HTML inside 1`] = `
"<p>text before</p>
<math-renderer class="js-display-math" style="display: block; text-align: center;">a^2 + &amp;lt;script>alert("hello")&amp;lt;/script> b^2 = c^2</math-renderer>
<p>text after</p>
"
`;
